# InspectionLite

./: pyproject.toml
core/: task.py
